--- a/.env
+++ b/.env
@@ -2,6 +2,9 @@ DB_USER=ROOT
 DB_PASSWORD=test
 DB_NAME=app
 
+NETWORK_SUBNET=172.25.0.0/24
+PHP_FPM_IP=172.25.0.6
+
 XDEBUG_REMOTE_IP=host.docker.internal
 IDE_KEY=PHPSTORM
 SERVER_NAME=ppp
