Update docker images and config (php8.1, xdebug3, mysql8)

--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@ NETWORK_SUBNET=172.25.0.0/24
 PHP_FPM_IP=172.25.0.6
 
 XDEBUG_REMOTE_IP=host.docker.internal
+XDEBUG_PORT=9003
 IDE_KEY=PHPSTORM
-SERVER_NAME=ppp
+SERVER_NAME=app
