--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,28 @@
 version: '3.7'
 services:
   nginx:
-    image: nginx:1.20-alpine
+    build:
+      context: ./docker/nginx
     volumes:
-      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./:/var/www/app
     ports:
       - "8081:80"
   php-fpm:
     build:
-      context: ./docker
-      dockerfile: php-fpm.docker
+      context: ./docker/php-fpm
     volumes:
       - ./:/var/www/app
-      - ./docker/php/php.ini:/usr/local/etc/php/php.ini
-    working_dir: /var/www/app
     environment:
-      XDEBUG_CONFIG: idekey=${IDE_KEY} client_port=${XDEBUG_PORT} client_host=${XDEBUG_REMOTE_IP}
       PHP_IDE_CONFIG: serverName=${SERVER_NAME}
     env_file:
       - .env
     networks:
       default:
         ipv4_address: ${PHP_FPM_IP}
+  php-cli:
+    build:
+      context: ./docker/php-cli
+    tty: true
   mysql:
     image: mysql:8.0
     environment:
