--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
   php-cli:
     build:
       context: ./docker/php-cli
+    volumes:
+      - ./:/var/www/app
     tty: true
   mysql:
     image: mysql:8.0
