Simplified config for dev environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,8 @@ services:
       PHP_IDE_CONFIG: serverName=${SERVER_NAME}
     env_file:
       - .env
-    networks:
-      default:
-        ipv4_address: ${PHP_FPM_IP}
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
   php-cli:
     build:
       context: ./docker/php-cli
@@ -33,12 +32,5 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     volumes:
       - ./data:/var/lib/mysql
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "3306:3306"
-networks:
-  default:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: ${NETWORK_SUBNET}
