--- a/docker/php-cli/Dockerfile
+++ b/docker/php-cli/Dockerfile
@@ -5,4 +5,8 @@ RUN curl -sS https://getcomposer.org/installer | php -- \
 
 RUN mv $PHP_INI_DIR/php.ini-development $PHP_INI_DIR/php.ini
 
+RUN addgroup -g 1000 app && adduser -u 1000 -G app -s /bin/sh -D app
+
 WORKDIR /var/www/app
+
+USER app
