--- a/.env
+++ b/.env
@@ -1,11 +1,5 @@
-DB_USER=ROOT
+DB_USER=root
 DB_PASSWORD=test
 DB_NAME=app
 
-NETWORK_SUBNET=172.25.0.0/24
-PHP_FPM_IP=172.25.0.6
-
-XDEBUG_REMOTE_IP=host.docker.internal
-XDEBUG_PORT=9003
-IDE_KEY=PHPSTORM
 SERVER_NAME=app
