--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -1,8 +1,10 @@
 FROM php:8.1-fpm-alpine
 
-RUN apk update && apk add unzip autoconf g++ make \
+RUN apk update && apk add unzip autoconf g++ make libpq-dev \
+    && apk add --update linux-headers \
     && pecl install xdebug \
-    && docker-php-ext-install pdo_mysql && docker-php-ext-enable xdebug
+    && docker-php-ext-install pdo_pgsql \
+    && docker-php-ext-enable xdebug
 
 RUN mv $PHP_INI_DIR/php.ini-development $PHP_INI_DIR/php.ini
 
