Add env for support configure images version

--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
+SERVER_NAME=app
+XDEBUG_VERSION=3.4.0beta1
+PHP_IMAGE_VERSION=8.4
+NGINX_IMAGE_VERSION=1.25
+POSTGRES_VERSION=15
+
 DB_USER=app
 DB_PASSWORD=test
 DB_NAME=demo
-
-SERVER_NAME=app
