--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -1,8 +1,11 @@
-FROM php:8.4-fpm-alpine
+ARG PHP_IMAGE_VERSION
+FROM php:${PHP_IMAGE_VERSION}-fpm-alpine
+
+ARG XDEBUG_VERSION
 
 RUN apk update && apk add unzip autoconf g++ make libpq-dev \
     && apk add --update linux-headers \
-    && pecl install xdebug-3.4.0beta1 \
+    && pecl install xdebug-$XDEBUG_VERSION \
     && docker-php-ext-install pdo_pgsql \
     && docker-php-ext-enable xdebug
 
